--- a/client-app/package.json
+++ b/client-app/package.json
@@ -13,10 +13,13 @@
     "@types/react-dom": "^18.0.10",
     "@types/react-router-dom": "^5.3.2",
     "axios": "^1.3.2",
+    "date-fns": "^2.29.3",
+    "formik": "^2.2.9",
     "mobx": "^6.9.0",
     "mobx-react-lite": "^3.4.3",
     "react": "^18.2.0",
     "react-calendar": "^4.2.1",
+    "react-datepicker": "^4.11.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^5.3.4",
     "react-scripts": "^5.0.1",
@@ -25,7 +28,8 @@
     "semantic-ui-react": "^2.1.4",
     "typescript": "^4.9.5",
     "uuid": "^9.0.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^1.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -52,6 +56,8 @@
     ]
   },
   "devDependencies": {
-    "@types/uuid": "^9.0.0"
+    "@types/react-datepicker": "^4.10.0",
+    "@types/uuid": "^9.0.0",
+    "@types/yup": "^0.32.0"
   }
 }
