--- a/client-app/package.json
+++ b/client-app/package.json
@@ -10,8 +10,8 @@
     "@types/node": "^16.18.12",
     "@types/react": "^18.0.27",
     "@types/react-calendar": "^3.9.0",
-    "@types/react-dom": "^18.0.10",
-    "@types/react-router-dom": "^5.3.2",
+    "@types/react-dom": "^18.0.11",
+    "@types/react-router-dom": "^6.4.3",
     "axios": "^1.3.2",
     "date-fns": "^2.29.3",
     "formik": "^2.2.9",
@@ -21,9 +21,10 @@
     "react-calendar": "^4.2.1",
     "react-datepicker": "^4.11.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^5.3.4",
+    "react-router-dom": "^6.4.3",
     "react-scripts": "^5.0.1",
     "react-toastify": "^9.1.2",
+    "require-auth": "^1.0.2",
     "semantic-ui-css": "^2.5.0",
     "semantic-ui-react": "^2.1.4",
     "typescript": "^4.9.5",
