--- a/client-app/package.json
+++ b/client-app/package.json
@@ -11,7 +11,6 @@
     "@types/react": "^18.0.27",
     "@types/react-calendar": "^3.9.0",
     "@types/react-dom": "^18.0.11",
-    "@types/react-router-dom": "^6.4.3",
     "axios": "^1.3.2",
     "date-fns": "^2.29.3",
     "formik": "^2.2.9",
@@ -19,9 +18,11 @@
     "mobx-react-lite": "^3.4.3",
     "react": "^18.2.0",
     "react-calendar": "^4.2.1",
+    "react-cropper": "^2.3.3",
     "react-datepicker": "^4.11.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.4.3",
+    "react-dropzone": "^14.2.3",
+    "react-router-dom": "^6.11.0",
     "react-scripts": "^5.0.1",
     "react-toastify": "^9.1.2",
     "require-auth": "^1.0.2",
